Add logo, lock file, and publication documentation
- Update .gitignore to allow OpenGov-Construction.png logo
- Add project logo for README visibility
- Include uv.lock for reproducible dependency management
- Add GITHUB_PUBLICATION.md with complete release documentation

Author: Nik Jois <nikjois@llamasearch.ai>

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,12 @@ __pycache__/
 dist/
 build/
 *.egg-info/
-*.png
+.coverage
+
+# Ignore data files but allow the logo
 *.csv
 *.graphml
+
+# Allow the logo file to be tracked
+!OpenGov-Construction.png
 
